# Pulsar_bot

./: Cargo.toml
src/: main.rs
src/commands/: admin.rs  animated_embed.rs  audio.rs  embed_animated.rs  message.rs  mod.rs  shared.rs  status.rs  stop_embed.rs  utils.rs  voice.rs  welcome.rs
src/handlers/: handler.rs  mod.rs  welcome.rs
src/status/: metrics.rs
src/task/: embed_updater.rs  mod.rs  status.rs
src/ui/: embeds.rs
src/workspace/: paths.rs
